# dynamic-disorder-simulator

./: .gitignore  CALIBRATIONS.md  README.md  pyproject.toml
configs/: graph.yaml  graph_ge_holes.yaml  graph_oxford_device.yaml  hyperprior.yaml  pipeline.yaml
scripts/: train_fcn_poc.py
src/simulator/: __init__.py
src/simulator/computational_graph/: abstract_computational_graph.py  graph_config.py
src/simulator/computational_graph/graph_nodes/: __init__.py  abstract_graph_node.py  deep_learning_base_node.py  node_configs.py
src/simulator/computational_graph/graph_nodes/nodes/: capacitance_model.py  carrier_density_node.py  double_dot_tunnel_coupling.py  initial_electrostatic_potential.py  laplacian_of_gaussian_dot_counter.py  self_consistent_potential_iterative.py  self_consistent_potential_model.py  (+1 more)
src/simulator/computational_graph/utils/: device_config.py
src/simulator/custom_pydantic_numpy/: __init__.py  dtype.py
src/simulator/deep_learning/: fcn.py  normalization.py
src/simulator/disorder_prior/: __init__.py  hyperprior.py  trap_sampler.py
src/simulator/injection/: __init__.py  external_disorder_node.py
src/simulator/pipeline/: __init__.py  config.py  dataset.py  generate.py  inducing_points.py  runner.py  storage.py  sweep.py  viz.py
src/simulator/pipeline/disorder_sources/: __init__.py  base.py  random_field.py  tlf.py
src/simulator/utils/: __init__.py  misc.py  operating_points.py  physics_utils.py  plotting_utils.py
tests/: test_disorder_injection.py  test_fcn.py  test_operating_points.py  test_random_field_source.py
(+4 files in other folders)
